fix main page align

--- a/Planetarium/public/css/welcome.css
+++ b/Planetarium/public/css/welcome.css
@@ -1,7 +1,7 @@
 .welcome-page {
   display: grid;
   grid-auto-flow: row;
-  grid-template-columns: (3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   position: relative;
   z-index: 0;
   min-height: 100svh;
@@ -30,10 +30,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
-}
-
-.welcome-page__header {
-  max-height: 50px;
 }
 
 .welcome-page__header__navigation {
